# twistrs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: rust.yml  update-data-files.yml  update-tlds.yml  update_tlds.yml
docs/: IMPLEMENTATION_SUMMARY.md  PHONETIC_DISTANCE.md
examples/phonetic-distance/: Cargo.toml
examples/phonetic-distance-demo/: Cargo.toml
examples/phonetic-distance-demo/src/: main.rs
examples/phonetic-distance/src/: main.rs
examples/twistr-cli/: Cargo.toml
examples/twistr-cli/src/: main.rs
examples/twistrs-cli/: Cargo.toml  README.md
examples/twistrs-cli/src/: main.rs
examples/twistrs-grpc/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  envoy.yaml
examples/twistrs-grpc/proto/: domain_enumeration.proto
examples/twistrs-grpc/src/: client.rs  domain_enumeration.rs  server.rs
examples/twistrs-ws/: Cargo.toml  README.md
examples/twistrs-ws/src/: main.rs
src/: constants.rs  enrich.rs  lib.rs  permutate.rs
twistrs/: Cargo.toml  build.rs
twistrs/benches/: bench_permute.rs
twistrs/data/: keywords.txt  tlds.txt  update-data-files.py  update-psl.py
twistrs/dictionaries/: keywords.txt
twistrs/src/: constants.rs  enrich.rs  error.rs  filter.rs  lib.rs  permutate.rs  phonetic.rs  tlds.rs
