[package]
name = "twistrs"
version = "0.4.2-beta"
description = "An asynchronous domain name permutation and enumeration library."
license = "MIT"
repository = "https://github.com/JuxhinDB/twistrs"
documentation  = "https://docs.rs/crate/twistrs"
authors = ["Juxhin Dyrmishi Brigjaj <juxhin@phishdeck.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[features]
geoip_lookup = [ "maxminddb" ]
whois_lookup = [ "whois-rust" ]

[dependencies]
addr = "0.13.1"
lazy_static = "1.4.0"
phf	= { version = "0.8.0", features = ["macros"] }
async-smtp = "0.5.0" 
async-native-tls = "0.3.3"
futures = "0.3"
tokio = { version = "1.19.2", features = ["full"] }
fancy-regex = "0.4.0"
idna = "0.2.0"
hyper = { version = "0.14.20", features = ["client", "http1", "http2", "tcp"] } 
itertools = "0.9.0"
serde = { version = "1.0.140", default_features = false, features = ["derive"]}
maxminddb = { version = "0.15.0", optional = true}
whois-rust = { version = "1.2.3", optional = true}

[build-dependencies]
punycode = "0.4.1"

[dev-dependencies]
criterion = "0.3"
tokio  = { version = "0.2.22", features = ["macros"] }

[[bench]]
name = "permute"
harness = false
path = "benches/bench_permute.rs"
