[package]
name = "twistrs"
version = "1.1.0"
description = "A domain name permutation library."
license = "MIT"
repository = "https://github.com/JuxhinDB/twistrs"
documentation  = "https://docs.rs/crate/twistrs"
authors = ["Juxhin Dyrmishi Brigjaj <juxhin@phishdeck.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
addr = "0.15.6"
lazy_static = "1.4.0"
phf	= { version = "0.11.2", features = ["macros"] }
itertools = "0.14.0"
serde = { version = "1.0.171", features = ["derive"]}
thiserror = "1.0.43"

[build-dependencies]
punycode = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "permute"
harness = false
path = "benches/bench_permute.rs"
