[package]
name = "twistrs-cli"
version = "0.1.0"
authors = ["Juxhin Dyrmishi Brigjaj <juxhin@phishdeck.com>"]
edition = "2021"

[dependencies]
twistrs = { path = "../../twistrs" }
clap = "3.0.0-beta.1"
colored = "1.9.3"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
