[package]
name = "twistrs-grpc"
version = "0.2.0"
authors = ["Juxhin Dyrmishi Brigjaj <juxhin@phishdeck.com>"]
edition = "2021"

[dependencies]
twistrs = { path = "../../twistrs" }
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
