[package]
name = "twistrs-ws"
version = "0.2.0"
authors = ["Juxhin Dyrmishi Brigjaj <juxhin@phishdeck.com>"]
edition = "2021"

[dependencies]
twistrs = { path = "../../twistrs" }
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
pretty_env_logger = "0.4"
